# BomberRobots

./: CMakeLists.txt  run.sh  setup.txt
src/: CMakeLists.txt  client.hpp  common.hpp  game.hpp  parse_args.hpp  robots-client.cpp  utils.hpp  variant_utils.hpp
src/buffers/: buffer.hpp  buffer_utils.hpp  buffers.hpp  buffers_utils.hpp  inbuffer.hpp  inbuffers.hpp  outbuffer.hpp  outbuffers.hpp  utils.hpp
src/messages/: action.hpp  event.hpp  gui.hpp  server.hpp
src/tests/: test_client_gui.hpp  test_client_server.hpp  test_gui_client.hpp  utils.hpp
